--- a/package.json
+++ b/package.json
@@ -15,23 +15,22 @@
     }
   },
   "dependencies": {
-    "async": "^2.1.4",
-    "glob": "^7.1.1",
-    "joi": "10.2.1",
+    "glob": "^7.1.2",
+    "joi": "^13.1.1",
     "lodash": "^4.17.4"
   },
   "devDependencies": {
-    "code": "4.0.0",
-    "codecov": "^1.0.1",
-    "commitizen": "2.9.5",
-    "cz-conventional-changelog": "1.2.0",
-    "eslint": "^3.15.0",
-    "eslint-config-xo-space": "^0.15.0",
+    "code": "^5.1.2",
+    "codecov": "^3.0.0",
+    "commitizen": "^2.9.6",
+    "cz-conventional-changelog": "^2.1.0",
+    "eslint": "^4.16.0",
+    "eslint-config-xo-space": "^0.17.0",
     "fixpack": "^2.3.1",
-    "ghooks": "^2.0.0",
-    "hapi": "^16.1.0",
-    "lab": "12.1.0",
-    "semantic-release": "6.3.2"
+    "ghooks": "^2.0.2",
+    "hapi": "^17.2.0",
+    "lab": "^15.2.1",
+    "semantic-release": "^12.4.1"
   },
   "files": [
     "lib",
